# auth_for_dummies

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  migration.py  pyproject.toml  test.py
app/: main.py
app/db/: config.py  connect.py  models.py  utils.py
app/db/manager/: crud.py
app/logger/: config.yml  logger.py
app/routes/v1/: auth.py  users.py
app/schemas/: common.py
app/schemas/db/: tokens.py  users.py
backend/: README.md  docker-compose.yml  main.py
backend/app/db/: connect.py  init_db.sql  utils.py
backend/app/db/manager/: crud.py
backend/app/logger/: logger.py
backend/app/routes/v1/: auth.py
backend/app/schemas/db/: users.py
front/: README.md
frontend/: package-lock 2.json  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx
frontend/src/assets/components/: LoginForm.jsx
frontend/src/components/InputField/: Field.tsx  InputField.tsx
frontend/src/components/LoggingForm/: LoggingForm.tsx  index.ts  index.tsx
frontend/src/components/LoggingFormBox/: LoggingFormBox.tsx  index.ts  index.tsx
frontend/src/components/user/: User.tsx
frontend/src/constants/: constants.ts  constants.tsx  index.ts  utils.ts
frontend/src/models/: auth.ts
